--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.8",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "uuid": "^8.3.2"
   }
